<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity"
    tools:context=".GUI.MainActivity">

    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_status"
        android:text="STATUS"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_below="@+id/tv_status"
        android:id="@+id/btn_listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Listen" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_listen"
        android:text="Scan" />


    <ListView
        android:layout_below="@id/btn_scan"
        android:id="@+id/list_devices"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</RelativeLayout>