<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/game_activity"
    tools:context=".GUI.GameActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBoardColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue"
        android:nestedScrollingEnabled="false"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
        android:id="@+id/imgView_player"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/yellow" />

        <TextView
            android:text="Hey "
            android:id="@+id/tv_nameOfPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
        android:text="You are Sv"
        android:id="@+id/tv_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="REPLAY"
            android:visibility="invisible" />

    </LinearLayout>





</LinearLayout>